# parhut

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt
include/: body.hpp  simulation.hpp
src/: body.cpp  main.cpp  simulation.cpp
